# modern-stl-gist

./: .gitignore  .uncrustify  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: clear.cmake  cppcheck.cmake  package.cmake  uncrustify.cmake  unix.cmake  windows.cmake
examples/: CMakeLists.txt
examples/cpp11/: CMakeLists.txt
examples/cpp11/custom_deleter/: CMakeLists.txt  main.cpp  pch.h
examples/cpp20/: CMakeLists.txt
examples/cpp20/worker_thread/: CMakeLists.txt  main.cpp  pch.cpp  pch.h  worker_thread.cpp  worker_thread.h
src/app/: CMakeLists.txt  main.cpp  pch.cpp  pch.h
tests/unit/: CMakeLists.txt  main.cpp  test_addition.cpp
